--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,11 @@
             <td id="0,7"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="0,8"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="0,9"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="0,10"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="0,11"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="0,12"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="0,13"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="0,14"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
         </tr>
         <tr>
             <td id="1,0"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
@@ -38,6 +43,11 @@
             <td id="1,7"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="1,8"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="1,9"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="1,10"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="1,11"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="1,12"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="1,13"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="1,14"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
         </tr>
         <tr>
             <td id="2,0"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
@@ -50,6 +60,11 @@
             <td id="2,7"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="2,8"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="2,9"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="2,10"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="2,11"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="2,12"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="2,13"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="2,14"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
         </tr>
         <tr>
             <td id="3,0"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
@@ -62,6 +77,11 @@
             <td id="3,7"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="3,8"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="3,9"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="3,10"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="3,11"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="3,12"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="3,13"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="3,14"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
         </tr>
         <tr>
             <td id="4,0"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
@@ -74,6 +94,11 @@
             <td id="4,7"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="4,8"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="4,9"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="4,10"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="4,11"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="4,12"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="4,13"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="4,14"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
         </tr>
         <tr>
             <td id="5,0"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
@@ -86,6 +111,11 @@
             <td id="5,7"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="5,8"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="5,9"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="5,10"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="5,11"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="5,12"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="5,13"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="5,14"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
         </tr>
         <tr>
             <td id="6,0"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
@@ -98,6 +128,11 @@
             <td id="6,7"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="6,8"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="6,9"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="6,10"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="6,11"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="6,12"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="6,13"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="6,14"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
         </tr>
         <tr>
             <td id="7,0"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
@@ -110,6 +145,11 @@
             <td id="7,7"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="7,8"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
             <td id="7,9"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="7,10"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="7,11"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="7,12"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="7,13"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
+            <td id="7,14"><span class="color"></span><span class="value"></span><span class="policy"></span></td>
         </tr>
     </table>
 
