--- a/www/index.html
+++ b/www/index.html
@@ -155,13 +155,12 @@
 
     <div>
         <p>Actions:</p>
-        <button type="button">Value iteration</button>
-        <button type="button">Policy iteration</button>
-        <button type="button">Policy evaluation</button>
+        <button type="button" id="btnPolicyEvaluate">Policy evaluate</button>
+        <button type="button" id="btnPolicyUpdate">Policy update</button>
+        <button type="button" id="btnPolicyIteration">Policy iteration (evaluate + update)</button>
+        <button type="button" id="btnPolicyIteration100">Policy 100 iterations</button>
 
         <button type="button" id="btnReset">Reset</button>
-        <button type="button" id="btnEvaluate">Evaluate</button>
-        <button type="button" id="btnPlay">Play 100</button>
     </div>
 
     <div>
