--- a/www/index.html
+++ b/www/index.html
@@ -186,12 +186,12 @@
     <div>
         <p>Policy:</p>
         <div>
-            <input type="radio" id="e" name="f" value="huey"  />
-            <label for="e">Uniform random policy</label>
+            <input type="radio" id="cfgRandomPolicy" name="greedy_policy" value="0"  />
+            <label for="cfgRandomPolicy">Uniform random policy</label>
         </div>
         <div>
-            <input type="radio" id="f" name="f" value="f" checked />
-            <label for="f">Greedy policy</label>
+            <input type="radio" id="cfgGreedyPolicy" name="greedy_policy" value="1" checked />
+            <label for="cfgGreedyPolicy">Greedy policy</label>
         </div>
     </div>
 
