Gamma dynamic setting

--- a/www/index.html
+++ b/www/index.html
@@ -200,6 +200,11 @@
     </div>
 
     <div>
+        <p>Gamma = <span id="gammaValue">0.90</span></p>
+        <input type="range" min="0" max="1" step="0.01" value="0.90" id="cfgGamma" />
+    </div>
+
+    <div>
         <p>Display:</p>
         <div>
             <input type="checkbox" id="showValues" checked />
