--- a/www/index.html
+++ b/www/index.html
@@ -174,7 +174,7 @@
             <label for="cfgInplaceBackupDP">Async in-place backup (update values of all states one by one in any order)</label>
         </div>
         <div>
-            <input type="radio" id="cfgPrioritizedDP" name="dp_mode" value="dp_prioritized" disabled />
+            <input type="radio" id="cfgPrioritizedDP" name="dp_mode" value="dp_prioritized" />
             <label for="cfgPrioritizedDP">Prioritized sweeping (update values of the state with largest delta value and all affected states)</label>
         </div>
         <div>
